feat(styles): add tailwind

--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
 	"scripts": {
-  "dev": "next",
-  "build": "next build",
-  "start": "next start"
-},
+      "dev": "next",
+      "build": "next build",
+      "start": "next start"
+    },
 	"dependencies": {
+      "@tailwindcss/postcss": "^4.0.1",
 		"next": "^15.1.6",
+      "nextra": "^4.2.0",
+      "nextra-theme-blog": "^4.2.0",
+      "postcss": "^8.5.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"nextra": "^4.2.0",
-		"nextra-theme-blog": "^4.2.0"
+      "tailwindcss": "^4.0.1"
 	}
 }
