--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.1",
     "next": "^15.1.6",
     "nextra": "^4.2.0",
     "nextra-theme-blog": "^4.2.0",
-    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.1"
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.1",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.1",
+    "typescript": "^5.7.3"
   }
 }
