--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@tailwindcss/postcss": "^4.0.1",
     "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
+    "pagefind": "^1.3.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.1",
     "typescript": "^5.7.3"
