--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "next": "^15.1.6",
     "nextra": "^4.2.0",
     "nextra-theme-blog": "^4.2.0",
