feat: add next-view-transitions

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "next": "^15.1.6",
+    "next-view-transitions": "^0.3.4",
     "nextra": "^4.2.0",
     "nextra-theme-blog": "^4.2.0",
     "react": "^19.0.0",
