refactor(setup): custom mdx, header, footer, search

--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "scripts": {
-    "dev": "next",
+    "dev": "next --turbopack",
     "build": "next build",
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
+    "clsx": "^2.1.1",
     "next": "^15.5.6",
     "next-view-transitions": "^0.3.4",
     "nextra": "^4.6.0",
     "nextra-theme-blog": "^4.6.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
