--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.548.0",
     "next": "^15.5.6",
     "next-view-transitions": "^0.3.4",
     "nextra": "^4.6.0",
@@ -23,6 +26,7 @@
     "pagefind": "^1.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
