--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
+    "motion": "^12.23.25",
     "next": "^16.0.1",
     "next-view-transitions": "^0.3.4",
     "nextra": "^4.6.0",
