--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,mdx,css,scss}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md,mdx,css,scss}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md,mdx,css,scss}\"",
+    "create-post": "node scripts/create-post.js"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
